--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.24.7",
+    "axios": "^1.8.4",
     "lucide-react": "^0.494.0",
     "next": "15.3.0",
     "react": "^19.0.0",
