--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.8.4",
     "he": "^1.2.0",
     "html-react-parser": "^5.2.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.494.0",
     "next": "15.3.0",
     "react": "^19.0.0",
